#1 - Add rendering images.

--- a/ui-doc-viewer/CMakeLists.txt
+++ b/ui-doc-viewer/CMakeLists.txt
@@ -12,6 +12,7 @@ include_directories(
         ui-widgets/include
         models/include
         utils/include
+        controllers/include
 )
 
 find_package(Qt5 COMPONENTS Core Gui Widgets REQUIRED)
