#2 #3 #5 - Fix add new area (resizing); Add Area property tool box.

--- a/ui-doc-viewer/CMakeLists.txt
+++ b/ui-doc-viewer/CMakeLists.txt
@@ -36,10 +36,9 @@ set(SOURCE
         ui-widgets/src/document_tab_widget.cpp
         ui-widgets/src/document_page_property.cpp
         ui-widgets/src/document_tab_view_widget.cpp
-
         ui-widgets/src/template_rect.cpp
-
         ui-widgets/src/pagination_widget.cpp
+        ui-widgets/src/tool_box_page_area.cpp
 
         # MAIN
         main.cpp
@@ -62,10 +61,9 @@ set(INCLUDE
         ui-widgets/include/document_tab_widget.h
         ui-widgets/include/document_page_property.h
         ui-widgets/include/document_tab_view_widget.h
-
         ui-widgets/include/template_rect.h
-
         ui-widgets/include/pagination_widget.h
+        ui-widgets/include/tool_box_page_area.h
 
         )
 
